[tool.poetry]
name = "network_coverage_api"
version = "1.0.0"
description = ""
authors = ["Benjamin Carlier <benjamincarlierfr@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.0"
pandas = "1.4.4"
fastapi = {extras = ["all"], version = "^0.104.0"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pyproj = "^3.6.1"
pytest = "^7.4.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
